bug fix and added new modules
bug fix and added new modules

--- a/assets/site-assets/css/style.css
+++ b/assets/site-assets/css/style.css
@@ -63,6 +63,10 @@ input, button, select, optgroup, textarea {
   font-size:24px;
 }
 
+.margin-5 {
+  margin: 5px !important;
+}
+
 .btn-one{
   position: relative;
   display: inline-block;
@@ -632,7 +636,7 @@ input, button, select, optgroup, textarea {
   overflow-x: scroll; }
 
 .table {
-  min-width: 1000px !important;
+  /* min-width: 1000px !important; */
   width: 100%;
   text-align: center; }
   .table th {
@@ -2448,4 +2452,5 @@ select option {
   background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
+
 }
